--- a/code4.html
+++ b/code4.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap&quot; rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap"rel=stylesheet">
     <style>
         :root {
-            --primary: #2de8ef;
+            --primary: #3a2def;
             --accent: #ff00dd;
             --bg: #f4f6fb;
             --card-bg: #fff;
@@ -104,7 +104,7 @@
             border-radius: 8px;
             padding: 1rem 2rem;
             min-width: 120px;
-            text-align: center;
+            text-align:center;
             font-weight: 700;
             color: var(--primary);
             transition: transform 0.2s;
@@ -196,7 +196,7 @@
 <body>
     <header>
         <h1>ruthu</h1>
-        <p>Full Stack Developer & UI Enthusiast</p>
+        <p>Full Stack Developer </p>
         <nav>
             <a href="#about">About</a>
             <a href="#skills">Skills</a>
